tests/rosetta/out/Fortran/almost-prime.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program almost_prime
  implicit none
    integer :: nf
    integer :: i
    integer, dimension(0) :: r
        integer, allocatable, dimension(:) :: app0
      character(len=100) :: s1
      character(len=100) :: s2
  main()
  contains
  recursive logical function kPrime(n,k) result(res)
    integer, intent(in) :: n
    integer, intent(in) :: k
    nf = 0
    i = 2
    do while ((i <= n))
      do while ((mod(n,i) == 0))
        if ((nf == k)) then
          res = .false.
          return
        end if
        nf = (nf + 1)
        n = (n / i)
      end do
      i = (i + 1)
    end do
    res = (nf == k)
    return
  end function kPrime
  recursive integer function gen(k,count) result(res)
    integer, intent(in) :: k
    integer, intent(in) :: count
    r = (//)
    n = 2
    do while ((size(r) < count))
      if (kPrime(n,k)) then
        allocate(app0(size(r)+1))
        app0(1:size(r)) = r
        app0(size(r)+1) = n
        r = app0
      end if
      n = (n + 1)
    end do
    res = r
    return
  end function gen
  recursive integer function main() result(res)
    k = 1
    do while ((k <= 5))
      write(s1,'(G0)') k
      write(s2,'(G0)') gen(k,10)
      print *, trim(s1 // ' ') // s2
      k = (k + 1)
    end do
  end function main
end program almost_prime
